src/objects/loan__Data_Migration_Error__c.object
<CustomObject>
    <fields>
        <fullName>loan__Data_Migration_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Migration Batch</label>
        <referenceTo>loan__Data_Migration_Batch__c</referenceTo>
        <relationshipLabel>Data Migration Errors</relationshipLabel>
        <relationshipName>Data_Migration_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Error_Code__c</fullName>
        <label>Error Code</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>loan__Interface_Record_External_Id__c</fullName>
        <label>Interface Record External Id</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>INFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WARNING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERROR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Data Migration Errors</relationshipLabel>
        <relationshipName>Data_Migration_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Migrated_Object__c</fullName>
        <label>Migrated Object</label>
        <picklist>
            <picklistValues>
                <fullName>Loan_Account__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan_account_Due_Details__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan_Payment_Transaction__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Object_Id__c</fullName>
        <label>Object Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Processing_Error__c</fullName>
        <label>Processing Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Import Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Import Valid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Data Migration Error</label>
    <nameField>
        <displayFormat>DME-{00000000}</displayFormat>
        <label>Data Migration Error ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Migration Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>